@@ -19,10 +19,12 @@ function getContextFromRequest (req, conf, type) {
     http_version: req.httpVersion,
     method: req.method,
     url: getUrlFromRequest(req),
-    socket: {
-      remote_address: req.socket.remoteAddress
-    },
     headers: undefined
+  }
+  if (req.socket && req.socket.remoteAddress) {
+    context.socket = {
+      remote_address: req.socket.remoteAddress
+    }
   }
 
   if (conf.captureHeaders) {
