@@ -39,6 +39,11 @@ Notes:
 [float]
 ===== Bug fixes
 
+
+* Fix a possible crash when serializing a Transaction if the incoming
+  `req.socket` is null (possible if the socket has been destroyed).
+  {issues}2479[#2479]}
+
 * Fixes for run context handling for 'aws-sdk' instrumentation (S3, SQS, SNS)
   so that a span created after an AWS client command (in the same tick, in
   the command callback, or promise) is not a child of the automatic AWS
